Fixed crew wrapping column

--- a/src/scss/quadrone/tables.scss
+++ b/src/scss/quadrone/tables.scss
@@ -442,6 +442,7 @@
       flex-wrap: nowrap;
       text-wrap: nowrap;
       overflow: hidden;
+      width: 100%;
 
       .remaining-damages-count {
         border: none;
